<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Math:Time Explorer</string>
    
    <!-- Loading -->
    <string name="start">Start</string>
    <string name="ok">OK</string>
    <string name="noInternetTitle">NO INTERNET CONNECTION!</string>
    
    <string name="noInternetMsg">
        Internet connection is required for gameplay! 
        Please ensure that you have Internet connectivity 
        and restart the game.
    </string>
    
    <!-- Credits -->
    <string name="tapReturn">TAP HERE TO RETURN</string>
        
    <!-- Login -->
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="userName">Username</string>
    <string name="pwdWord">Password</string>
    
    <!-- Settings -->
    <string name="soundEff">Sound Effects</string>
    <string name="music">Music</string>
    <string name="credits">Credits</string>
    <string name="done">Done</string>
    
    <!-- Sub-topic selection -->
    <string name="practice">Practice Set</string>
    <string name="tutorial">Tutorial</string>
    
    <!-- XGame -->
    <string name="timeLeft">Time Left: 00:00</string>
    <string name="qnsCorrect">Questions Correct:</string>
    <string name="qnsWrong">Questions Wrong:</string>
    <string name="totalScore">Total Score:</string>
    
    <!-- Ranking -->
    <string name="name">Name</string>
    <string name="rank">Rank</string>
    <string name="result">Result</string>
    <string name="noResult">No Result</string>
    
    <string-array name="class_topic_arrays">
        <item>-- Select a topic --</item>
        <item>Arithmetic</item>
        <item>Fraction</item>
        <item>Measurement</item>
        <item>Other Topics</item>
    </string-array>
    
    <string-array name="school_topic_arrays">
        <item>-- Select a topic --</item>
        <item>Arithmetic</item>
        <item>Fraction</item>
        <item>Measurement</item>
        <item>Other Topics</item>
        <item>XGame</item>
        <item>Coin Coin</item>
    </string-array>
    
    <string name="noResultFoundTitle">No Result Found</string>
    
    <string name="noResultFoundMsg">
        No Result was found! Please try again later. 
    </string>
    
    <!-- CoinCoin -->
    <string name="coincoin_storyboard">
        Your Mum hides the pocket money of different values under a set of cards. \n
    	She wants you to be familiar with your coins and money, therefore she \n
    	wants you to match the correct values with 2 cards. If you can match the \n
    	value, the pocket money belongs to you. You only have 5 minutes. Good luck!!!
    </string>
    
    <string name="timeTaken">TIME TAKEN:</string>
    <string name="tapStart">TAP HERE TO START THE GAME</string>
    <string name="coincoin_qn">YOUR MUM WANTS YOU TO FIND: ?</string>
    <string name="coincoin_timesup">SORRY!! TIMES UP!!!</string>
    <string name="coincoin_timetaken">Time Taken:</string>
    <string name="coincoin_nooftries">Number of Flips:</string>
    
    <!-- Resume Game Dialog -->
    <string name="resume">Resume</string>
    <string name="exit">Exit</string>
    <string name="resumeGameTitle">Resuming Game</string>
    
    <string name="resumeGameMsg">
        Game is resumed from previous gameplay.
        Do you wish to carry on from previous
        checkpoint or exit to sub-topic screen?
    </string>
    
    <!-- Tutorial -->
    <string name="tutorialEnd">End Tutorial</string>
    <string name="noTutFoundTitle">No Tutorials Found!</string>  
    <string name="noTutFoundMsg">No tutorials found, please inform your tutor.</string>
    <string name="saveProgSucTitle">Progress saved successfully!</string>
    <string name="saveProgFailTitle">Failed to save progress!</string>
    <string name="saveProgFailMsg">Failed to save progress, please inform your tutor.</string>
    
    <!-- Quiz & Practice Set -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
     <string name="Back">Back</string>
    <string name="Easy">Easy</string>
    <string name="Normal">Normal</string>
    <string name="Hard">Hard</string>
    <string name="obtainablestars">Obtainable Stars:</string>
    <string name="currentstar">Current Stars:</string>
    <string name="selectquiz">Select Quiz</string>
    <string name="finish">Finish</string>
    <string name="selecttopic">Select Topic</string>
    
    <!--  Fraction Game -->
    <string name="fractiongame_text">Mr. Eskimo has to serve:</string>
</resources>
