<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/selectpracticesetbackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/practiceback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="50dp"
        android:text="@string/Back" />

    <Button
        android:id="@+id/practicestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/practiceback"
        android:layout_alignBottom="@+id/practiceback"
                android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:text="@string/start" />

    <RadioGroup
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pracset_starsobtain"
        android:layout_alignLeft="@+id/pracset_starsobtain"
        android:layout_centerVertical="true"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioeasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Easy" />

        <RadioButton
            android:id="@+id/radionormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Normal" />

        <RadioButton
            android:id="@+id/radiohard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hard" />
    </RadioGroup>

    <TextView
        android:id="@+id/pracset_starsobtain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pracset_currentstar"
        android:layout_alignRight="@+id/pracset_currentstar"
        android:layout_marginTop="10dp"
        android:text="@string/obtainablestars" />

    <TextView
        android:id="@+id/pracset_currentstar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
		android:layout_marginTop="100dp"
		android:layout_marginLeft="160dp"
        android:text="@string/currentstar" />

    <TextView
        android:id="@+id/practicesetsubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/obtainablestarslayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pracset_starsobtain"
        android:layout_toRightOf="@+id/pracset_starsobtain"
        android:orientation="horizontal" >

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/currentstarslayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pracset_currentstar"
        android:layout_toRightOf="@+id/pracset_currentstar"
        android:orientation="horizontal" >

    </LinearLayout>

</RelativeLayout>