<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_settings_bkgrd"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/usrTxtField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/userName" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/pwdTxtField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usrTxtField"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/pwdWord"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/cancelBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/pwdTxtField"
        android:layout_below="@+id/pwdTxtField"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/loginBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancelBtn"
        android:layout_alignBottom="@+id/cancelBtn"
        android:layout_toLeftOf="@+id/cancelBtn"
        android:text="@string/login" />

</RelativeLayout>