<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_settings_bkgrd"
    tools:context=".SettingsActivity" >

    <Button
        android:id="@+id/doneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/creditsBtn"
        android:layout_alignBottom="@+id/creditsBtn"
        android:layout_toLeftOf="@+id/cancelBtn1"
        android:text="@string/done" />

    <Button
        android:id="@+id/cancelBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/doneBtn"
        android:layout_alignBottom="@+id/doneBtn"
        android:layout_alignRight="@+id/musicSb"
        android:text="@string/cancel" />

    <Switch
        android:id="@+id/musicSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="55dp"
        android:text="@string/music" />

    <SeekBar
        android:id="@+id/musicSb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/musicSwitch"
        android:layout_below="@+id/musicSwitch"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/creditsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/musicSb"
        android:layout_below="@+id/musicSb"
        android:layout_marginTop="14dp"
        android:text="@string/credits" />

</RelativeLayout>